--- a/styles.css
+++ b/styles.css
@@ -33,13 +33,36 @@ body{
 }
 
 .nav-container{
-    width: 25%;
+    width: 27%;
     border-right: 1px solid var(--grey-three);
+    position: relative;
 }
 
 .content-container {
     width: 100%;
     height: 100%;
+}
+
+/* ===================== */
+/* NAV CONTAINER STYLING */
+/* ===================== */
+
+.list-add{
+    position: absolute;
+    bottom: 3.2rem;
+    right: 3.2rem;
+    height: 3.6rem;
+    width: 3.6rem;
+    transition: transform 100ms ease-in;
+    border-radius: 6px;
+    outline: 2px solid white;
+}
+
+.list-add:hover,
+.list-add:focus-visible{
+    outline: 2px solid var(--grey-four);
+    transform: scale(1.1);
+    cursor: pointer;
 }
 
 .lists {
@@ -48,13 +71,40 @@ body{
 }
 
 .list{
-    width: 14.8rem;
+    width: 15.6rem;
     display: flex;
     margin-inline: auto;
     justify-content: space-between;
     align-items: center;
     line-height: 1.6;
     position: relative;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+}
+
+.list:hover, .list:focus-visible {
+    outline: 0;
+    /* text-decoration: underline; */
+    border-top: 1px solid var(--grey-four);
+    border-bottom: 1px solid var(--grey-four);
+    cursor: pointer;
+}
+
+.list:hover .list__options-cta, .list:focus-visible .list__options-cta{
+    display: flex;
+}
+
+.list--active .list__name{
+    font-weight: bold;
+    color: var(--primary-color);
+}
+
+.list--options-visible .list__options-cta{
+    display: flex;
+}
+
+.list--options-visible .list__options{
+    display: block;
 }
 
 .list__name {
@@ -65,7 +115,7 @@ body{
 .list__options-cta {
     width: 3.2rem;
     height: 3.2rem;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     position: relative;
@@ -102,6 +152,7 @@ body{
 }
 
 .list__options {
+    display: none;
     list-style-type: none;
     position: absolute;
     top:100%;
@@ -119,7 +170,17 @@ body{
     line-height: 1.6;
     padding: 0.4rem 1.2rem 0.4rem 1.2rem;
     transition: background-color 100ms ease-in;
+}
 
+.list__option__icon--modify{
+    height: 1.8rem;
+    width: 1.8rem;
+    padding-left: 1px;
+}
+
+.list__option__icon--delete{
+    height: 2rem;
+    width: 1.8rem;
 }
 
 .list__option:first-child{
