content container style finish

--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body{
 .main-container{
     background-color: white;
     width: min(120rem, 80%);
-    height: max(64rem, 70%);
+    height: max(54rem, 70%);
     display: flex;
     border-radius: 0.8rem;
     z-index: 1;
@@ -56,13 +56,13 @@ body{
     transition: transform 100ms ease-in;
     border-radius: 6px;
     outline: 2px solid white;
+    cursor: pointer;
 }
 
 .list-add:hover,
 .list-add:focus-visible{
     outline: 2px solid var(--grey-four);
     transform: scale(1.1);
-    cursor: pointer;
 }
 
 .lists {
@@ -80,18 +80,18 @@ body{
     position: relative;
     border-top: 1px solid white;
     border-bottom: 1px solid white;
+    transition: color 100ms ease-in;
 }
 
-.list:hover, .list:focus-visible {
+.list:hover, .list:focus-visible, .list--options-visible {
     outline: 0;
-    /* text-decoration: underline; */
     border-top: 1px solid var(--grey-four);
     border-bottom: 1px solid var(--grey-four);
-    cursor: pointer;
 }
 
-.list:hover .list__options-cta, .list:focus-visible .list__options-cta{
-    display: flex;
+.list:hover .list__options-cta, .list:focus-visible .list__options-cta, 
+.list--options-visible .list__options-cta {
+    opacity: 1;
 }
 
 .list--active .list__name{
@@ -110,15 +110,18 @@ body{
 .list__name {
     font-size: 2.4rem;
     color: var(--grey-one);
+    cursor: pointer;
 }
 
 .list__options-cta {
     width: 3.2rem;
     height: 3.2rem;
-    display: none;
+    display: flex;
+    opacity:0;
     justify-content: center;
     align-items: center;
     position: relative;
+    cursor: pointer;
 }
 
 .list__options-cta::before{
@@ -133,10 +136,6 @@ body{
 
 }
 
-.list__options-cta:hover{
-    cursor: pointer;
-}
-
 .list__options-cta:hover::before{
     background-color: var(--grey-three);
     opacity: 0.6;
@@ -145,9 +144,6 @@ body{
 .list__options-cta__svg{
     height: 1.8rem;
     z-index: 4;
-}
-
-.list__options-cta__svg:hover{
     cursor: pointer;
 }
 
@@ -170,6 +166,7 @@ body{
     line-height: 1.6;
     padding: 0.4rem 1.2rem 0.4rem 1.2rem;
     transition: background-color 100ms ease-in;
+    cursor: pointer;
 }
 
 .list__option__icon--modify{
@@ -189,5 +186,196 @@ body{
 
 .list__option:hover{
     background-color: var(--grey-four);
+}
+
+/* ========================= */
+/* CONTENT CONTAINER STYLING */
+/* ========================= */
+
+.content-header{
+    width: 92%;
+    margin: 0 auto;
+    margin-bottom: 3.2rem;
+    padding: 3.2rem 1.6rem 1.6rem 1.6rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid var(--grey-three);
+}
+
+.active-list-title{
+    font-size: 3.6rem;
+    font-weight: bold;
+}
+
+.item-add{
+    background-color: white;
+    padding: 0.8rem 1.2rem 0.6rem 1.2rem;
+    border-radius: 0.6rem;
+    border: 0;
+    outline: 0;
+    font-size: 2rem;
+    font-weight: bold;
+    opacity: 0.7;
+    transition: all 100ms ease-in;
+    font-family: 'Lato', sans-serif;
     cursor: pointer;
+}
+
+.item-add:hover,.item-add:focus-visible{
+    background-color: rgba(217, 217, 217, 0.6);
+    opacity: 0.9;
+}
+
+.items{
+    list-style-type:none;
+}
+
+.item__info{
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+}
+
+.item{
+    width: 92%;
+    margin: 0 auto;
+    padding-left: 1.6rem;
+    padding-block: 0.4rem;
+    font-size: 2.4rem;
+    color: var(--grey-one);
+    display: flex;
+    justify-content: space-between;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+    position: relative;
+}
+
+.item:hover, .item--options-visible {
+    border-top: 1px solid var(--grey-four);
+    border-bottom: 1px solid var(--grey-four);
+}
+
+.item__input{
+    opacity: 0;
+    width: 3.2rem;
+    height: 3.2rem;
+}
+
+.item__label{
+    position: relative;
+}
+
+.item__label::before{
+    content: "";
+    background: url('./assets/checkbox-empty.svg');
+    background-position: center;
+    background-size: contain;
+    width: 3rem;
+    height: 3rem;
+    position: absolute;
+    left: calc(-3.2rem - 2rem);
+    cursor: pointer;
+}
+
+.item__options-cta {
+    width: 3.6rem;
+    height: 3.6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.item:hover .item__options-cta, 
+.item--options-visible .item__options-cta{
+    opacity: 1;
+}
+
+.item__options-cta::before{
+    background-color: white;
+    transition: background-color 100ms ease-in;
+    content: "";
+    border-radius: 50%;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    z-index: 2;
+
+}
+
+.item__options-cta:hover::before{
+    background-color: var(--grey-three);
+    opacity: 0.6;
+}
+
+.item__options-cta__svg{
+    height: 2rem;
+    z-index: 4;
+    cursor: pointer;
+}
+
+.item--completed .item__label{
+    text-decoration:line-through
+}
+
+ .item--completed .item__label::before{
+    content: "";
+    background: url('./assets/checkbox-filled.svg');
+    background-position: center;
+    background-size: contain;
+    width: 3rem;
+    height: 3rem;
+    position: absolute;
+    left: calc(-3.2rem - 2rem);
+    cursor: pointer;
+}
+
+.item--options-visible .item__options{
+    display: block;
+}
+
+
+.item__options {
+    display: none;
+    list-style-type: none;
+    position: absolute;
+    top:100%;
+    right: 0;
+    background-color: white;
+    z-index: 9;
+    width: 20%;
+    border: 1px solid var(--grey-three);
+    font-size: 2rem;
+}
+
+.item__option {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    line-height: 1.6;
+    padding: 0.4rem 1.2rem 0.4rem 1.2rem;
+    transition: background-color 100ms ease-in;
+    cursor: pointer;
+}
+
+.item__option__icon--modify{
+    height: 1.8rem;
+    width: 1.8rem;
+    padding-left: 1px;
+}
+
+.item__option__icon--delete{
+    height: 2rem;
+    width: 1.8rem;
+}
+
+.item__option:first-child{
+    border-bottom: 1px solid var(--grey-three);
+}
+
+.item__option:hover{
+    background-color: var(--grey-four);
 }
