--- a/src/styles.css
+++ b/src/styles.css
@@ -25,11 +25,15 @@ body{
 
 .main-container{
     background-color: white;
-    width: min(120rem, 80%);
+    width: min(120rem, 90%);
     height: max(54rem, 70%);
     display: flex;
     border-radius: 0.8rem;
     z-index: 1;
+}
+
+.nav-toggle {
+    display: none;
 }
 
 .nav-container{
@@ -47,6 +51,7 @@ body{
 /* NAV CONTAINER STYLING */
 /* ===================== */
 
+
 .list-add{
     position: absolute;
     bottom: 3.2rem;
@@ -59,8 +64,14 @@ body{
     cursor: pointer;
 }
 
+.list-add--mobile{
+    display: none;
+}
+
 .list-add:hover,
-.list-add:focus-visible{
+.list-add:focus-visible,
+.list-add--mobile:hover,
+.list-add--mobile:focus-visible{
     outline: 2px solid var(--grey-four);
     transform: scale(1.1);
 }
@@ -319,6 +330,7 @@ body{
     height: 3.2rem;
     position: absolute;
     left: calc(-2 * var(--width) - var(--gap));
+    top:0;
     animation: right-left 1s ;
     animation-iteration-count: infinite;
 }
@@ -448,4 +460,139 @@ body{
 
 .item__option:hover{
     background-color: var(--grey-four);
+}
+
+/* rem and em do NOT depend on html font-size in media queries! Instead, 1rem = 1em = 16px */
+@media (max-width: 1100px) {
+    html{
+        font-size: 60%;
+    }
+  }
+
+@media (max-width: 900px){
+    .main-container{
+        position: relative;
+    }
+
+    .nav-container--shown-mobile{
+        width: 76%;
+        height: 100%;
+        position: absolute;
+        z-index: 3;
+        background-color: white;
+        border-top-left-radius: 0.8rem;
+        border-bottom-left-radius: 0.8rem;
+        animation-name: navBarAnimation;
+        animation-duration: 250ms;
+        animation-iteration-count: 1;
+        animation-timing-function: ease-in;
+        transform-origin: left;
+    }
+
+    @keyframes navBarAnimation {
+        from{
+            transform: scaleX(0);
+            transform: translateX(-20rem);
+        }
+        50%{
+            transform: scaleX(0.8);
+        }
+        to{
+            transform: scaleX(1);
+            transform: translateX(0);
+        }
+    }
+
+    .nav-container--hidden{
+        opacity: 0;
+        width: 0;
+    }
+
+    .mobile-aside{
+        width: 6.4rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-end;
+        padding-top: 3.6rem;
+        padding-bottom: 3.2rem;
+    }
+
+    .mobile-aside--lists-visible{
+        position: absolute;
+        left:0;
+    }
+
+    .nav-toggle{
+        display: block;
+        width: 4.2rem;
+        height: 4.2rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        outline: 0;
+    }
+
+    .nav-toggle::before{
+        background-color: white;
+        transition: background-color 100ms ease-in;
+        content: "";
+        height: 4.8rem;
+        width: 4.8rem;
+        border-radius: 50%;
+        position: absolute;
+        z-index: 2;
+    }
+
+    .nav-toggle:focus::before,
+    .nav-toggle:hover::before{
+        background-color: var(--grey-three);
+        opacity: 0.45;
+    }
+
+    .nav-toggle__svg{
+        width: 3rem;
+        z-index: 4;
+    }
+
+    .list-add{
+        width: 4.2rem;
+        height: 4.2rem;
+    }
+
+    .list-add--mobile{
+        display: block;
+        width: 4.2rem;
+        height: 4.2rem;
+        cursor: pointer;
+        border-radius: 6px;
+    }
+
+    .hidden{
+        display: none;
+    }
+
+    .nav-container--shown-mobile .list{
+        width: 17.2rem;
+    }
+
+    .content-container--navbar-shown{
+        margin-left: 6rem;
+    }
+}  
+
+@media (max-width: 660px){
+
+    .active-list-title{
+        font-size: 3rem;
+    }
+
+    .nav-container--shown-mobile{
+        width: 66%;
+    }
+
+    .content-container--navbar-shown{
+        margin-left: 5.7rem;
+    }
 }
