--- a/src/styles.css
+++ b/src/styles.css
@@ -48,6 +48,7 @@ body {
 .content-container {
   width: 100%;
   height: 100%;
+  position: relative;
 }
 
 /* ===================== */
@@ -576,6 +577,29 @@ body {
   color: var(--grey-one);
   outline: 2px solid var(--grey-four);
   outline-offset: 0.4rem;
+}
+
+/* =============== */
+/* MESSAGE STYLING */
+/* =============== */
+
+.message {
+  display: inline-block;
+  position: absolute;
+  top: 33%;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1.6rem;
+  font-size: 2rem;
+  color: var(--grey-one);
+}
+
+.message_icon {
+  height: 4.2rem;
+  width: 4.2rem;
 }
 
 /* rem and em do NOT depend on html font-size in media queries! Instead, 1rem = 1em = 16px */
