--- a/src/styles.css
+++ b/src/styles.css
@@ -51,6 +51,57 @@ body {
   position: relative;
 }
 
+/* ======================== */
+/* Hidden container styling */
+/* ======================== */
+
+.hidden-container {
+  background-color: white;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 1.2rem 1.6rem;
+  z-index: 2;
+  filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.15));
+  border-bottom-right-radius: 0.4rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
+  transform: translateX(-100%);
+  transition: transform 150ms ease-in;
+}
+
+.hidden-container:focus-within {
+  transform: translateX(0);
+}
+
+.hidden-container__link {
+  border: 1.5px solid var(--grey-one);
+  text-align: center;
+  font-size: 1.4rem;
+  padding-block: 0.8rem;
+  border-radius: 0.2rem;
+  outline: 0;
+  color: var(--grey-one);
+}
+
+.hidden-container__link:focus-visible {
+  text-decoration: underline;
+}
+
+.instructions {
+  width: 10.8rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.4rem;
+  color: var(--grey-one);
+}
+
+.instructions__img {
+  width: 3rem;
+}
+
 /* ===================== */
 /* NAV CONTAINER STYLING */
 /* ===================== */
@@ -115,7 +166,7 @@ body {
   list-style-type: none;
   margin-top: max(1.28rem, 14vh);
   overflow-y: scroll;
-  max-height: 36rem;
+  height: 36rem;
   margin-right: 0.2rem;
 }
 
@@ -338,7 +389,7 @@ body {
 .items {
   list-style-type: none;
   overflow-y: scroll;
-  max-height: 60%;
+  height: 60%;
   margin-right: 0.2rem;
 }
 
