--- a/src/styles.css
+++ b/src/styles.css
@@ -67,12 +67,13 @@ body {
   display: flex;
   flex-direction: column;
   gap: 0.2rem;
-  transform: translateX(-100%);
-  transition: transform 150ms ease-in;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 100ms ease-in;
 }
 
 .hidden-container:focus-within {
-  transform: translateX(0);
+  transform: scaleX(1);
 }
 
 .hidden-container__link {
